# mcp.cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SRS.md  conanfile.py
.github/workflows/: ci.yml
cmake/: dependencies.cmake  mcpConfig.cmake.in  warnings.cmake
cmake/toolchains/: vxworks-rtp.cmake.example
docs/: vxworks-port.md
examples/: CMakeLists.txt  calculator_server.cpp  echo_server.cpp  echo_server_http.cpp
examples/vxworks_monitor/: README.md  monitor_backend.hpp  monitor_backend_sim.cpp  monitor_backend_vxworks.cpp  vxworks_monitor_server.cpp
include/mcp/: capabilities.hpp  content.hpp  error.hpp  json.hpp  log.hpp  mcp.hpp  methods.hpp  result.hpp  types.hpp  version.hpp.in
include/mcp/client/: client.hpp  elicitation.hpp  roots_provider.hpp  sampling.hpp
include/mcp/core/: cancellation.hpp  progress.hpp  router.hpp  session.hpp
include/mcp/detail/: json_util.hpp  pagination.hpp  schema.hpp  uri_template.hpp
include/mcp/jsonrpc/: message.hpp
include/mcp/server/: completion.hpp  logging.hpp  prompt_provider.hpp  resource_provider.hpp  server.hpp  tool_registry.hpp
include/mcp/sys/: threading.hpp  threading_vxworks.hpp
include/mcp/transport/: http_client_transport.hpp  http_server_transport.hpp  http_session_server.hpp  line_transport.hpp  stdio_client_transport.hpp  stdio_transport.hpp  transport.hpp
ports/mcp-cpp/: portfile.cmake  vcpkg.json
src/: CMakeLists.txt
src/client/: client.cpp  roots_provider.cpp  sampling.cpp
src/core/: content.cpp  log.cpp  router.cpp  schema.cpp  session.cpp
src/jsonrpc/: message.cpp
src/platform/: pal.hpp
src/platform/posix/: io.cpp  net.cpp  process.cpp
src/platform/vxworks/: io.cpp  net.cpp  threading.cpp
src/platform/win32/: io.cpp  net.cpp  process.cpp  win32_common.hpp
src/server/: logging.cpp  prompt_provider.cpp  resource_provider.cpp  server.cpp  tool_registry.cpp  uri_template.cpp
src/transport/: http_client_transport.cpp  http_server_transport.cpp  http_session_server.cpp  line_io.cpp  line_io.hpp  line_transport.cpp  stdio_client_transport.cpp  stdio_transport.cpp
src/transport/http/: http_codec.cpp  http_codec.hpp  http_endpoint.cpp  http_endpoint.hpp  socket_util.cpp  socket_util.hpp  sse_channel.cpp  sse_channel.hpp
tests/: CMakeLists.txt  mock_transport.hpp  test_client.cpp  test_client_integration.cpp  test_conformance.cpp  test_content.cpp  test_error.cpp  test_http_codec.cpp  test_http_integration.cpp  test_http_session.cpp  test_http_transport.cpp  test_integration.cpp  test_log.cpp  test_message.cpp  test_prompts.cpp  test_resources.cpp  test_roots.cpp  test_router.cpp  test_sampling.cpp  test_schema.cpp  test_server.cpp  test_server_integration.cpp  test_session.cpp  test_stdio.cpp  test_tools.cpp
tests/consumer/: CMakeLists.txt  main.cpp
tests/tools/: echo_stdio.cpp  prober_stdio.cpp  toolbox_stdio.cpp
tools/: CMakeLists.txt  pal_selftest.cpp
